--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "♡𝕮𝖍𝖔𝖈𝖔𝖑𝖆𝖙𝖊 𝕼𝖚𝖊𝖊𝖓♡",
+	"nickNameBot": "❀ėฬ𝔯 𝖋á𝒊ⲍ𐍈❀",
 	"prefix": "(",
 	"adminOnly": {
 		"enable": false,
