--- a/config.json
+++ b/config.json
@@ -18,13 +18,10 @@
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": ["100045644423035"],
+	"adminBot": ["100045644423035", "61573492023196"],
 	"whiteListMode": {
 		"enable": false,
-		"whiteListIds": [
-			"100045644423035",
-			"61569536021532"
-		],
+		"whiteListIds": ["100045644423035", "61569536021532", "61573492023196"],
 		"notes": "if you enable this feature, only the ids in the whiteListIds list can use the bot"
 	},
 	"whiteListModeThread": {
