--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"facebookAccount": {
-		"email": "hifor109@gmail.com",
-		"password": "S858590",
+		"email": "hifor103@gmail.com",
+		"password": "Sirana252@",
 		"2FASecret": "",
 		"i_user": "",
 		"proxy": true,
