--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
 		"intervalGetNewCookie": 1440,
 		"notes": "time the system automatically retrieves new cookies from email/password, unit is minute, if you set null, the system will not automatically retrieve new cookies, it saves you from having to manually change your cookie every time it expires. recommended set to 1440 (1day) or 4320 (3day).TO BE ABLE TO USE THIS FEATURE YOU NEED TO ENTER THE ACCOUNT PASSWORD ABOVE"
 	},
-	"antiInbox": true,
+	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
 	"nickNameBot": "❀ėฬ𝔯 𝖋á𝒊ⲍ𐍈❀",
@@ -18,10 +18,18 @@
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": ["100045644423035", "61573492023196"],
+	"adminBot": [
+		"100045644423035",
+		"61573492023196"
+	],
+	"owner": ["100045644423035"],
 	"whiteListMode": {
-		"enable": false,
-		"whiteListIds": ["100045644423035", "61573492023196", "61569536021532"],
+		"enable": true,
+		"whiteListIds": [
+			"100045644423035", 
+			"61573492023196", 
+			"61569536021532"
+		],
 		"notes": "if you enable this feature, only the ids in the whiteListIds list can use the bot"
 	},
 	"whiteListModeThread": {
@@ -37,7 +45,7 @@
 		"autoRefreshThreadInfoFirstTime": true,
 		"notes": "(1) type selects 'json' or 'sqlite' or 'mongodb'. If you choose mongodb, enter uri connect mongodb in the uriMongodb section, instructions to get uri connect mongodb at: https://youtu.be/z1f9urHW5xY. I recommend using 'mongodb' or 'sqlite', json is not recommended because it is not stable. (2) when you set autoSyncWhenStart to true, the bot will automatically synchronize the data in the database when starting the bot, this will make the bot start slower. (3) when you set autoRefreshThreadInfoFirstTime to true, the bot will automatically refresh the thread information when get first message from the thread since starting the bot"
 	},
-	"timeZone": "Asia/Ho_Chi_Minh",
+	"timeZone": "Asia/Dhaka",
 	"credentials": {
 		"gmailAccount": {
 			"email": "sirana5097@gmail.com",
@@ -47,8 +55,8 @@
 			"apiKey": "AIzaSyAhkr3Ncqu6c_0a_anyO6pdu2ZRG5lVscM"
 		},
 		"gRecaptcha": {
-			"siteKey": "6Ld5ZsEqAAAAAIeOa3wkhw4on216YZdzylqvQraI",
-			"secretKey": "6Ld5ZsEqAAAAAHP5_g9kqP3mwpFA4UqY5nliUsQb"
+			"siteKey": "6LfR_eIqAAAAAJ7iv5GGCSTMTbhbzyUtpYQcwHXS",
+			"secretKey": "6LfR_eIqAAAAALlwNhRONS5BLwglWLVImOt-4LT-"
 		}
 	},
 	"dashBoard": {
@@ -86,7 +94,7 @@
 	"autoRestartWhenListenMqttError": false,
 	"restartListenMqtt": {
 		"enable": true,
-		"timeRestart": 3600000,
+		"timeRestart": 300000,
 		"delayAfterStopListening": 2000,
 		"logNoti": true,
 		"notes": "the value of timeRestart and delayAfterStopListening is milisecond, You shouldn't edit this if you don't know what it is"
@@ -136,7 +144,7 @@
 		"updatePresence": true,
 		"listenTyping": true,
 		"logLevel": "error",
-		"selfListen": false,
+		"selfListen": true,
 		"selfListenEvent": true,
 		"autoMarkDelivery": false,
 		"autoReconnect": false,
