--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
 	],
 	"owner": ["100045644423035"],
 	"whiteListMode": {
-		"enable": true,
+		"enable": false,
 		"whiteListIds": [
 			"100045644423035", 
 			"61573492023196", 
